Added updates with fix/vehicle-profile